safari bottom bar footer fix, header: start display:none on mobile, more header padding on mobile, more footer padding

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,6 +2,10 @@
 /* CSS Document */
 
 .is_hidden_mobile {
+	display: none !important;
+}
+
+#nav-start {
 	display: none;
 }
 
@@ -35,7 +39,7 @@ html {
 }
 
 header {
-	padding:15px 6.66%;
+	padding:25px 6.66%;
 	font-size:18pt;
 }
 
@@ -44,7 +48,7 @@ header #logo img {
 	display:block;
 	float:none;
 	margin:auto;
-	margin-bottom:10px;
+	margin-bottom:20px;
 }
 
 header nav {
@@ -84,7 +88,8 @@ main article .half_width {
 }
 
 footer {
-	padding:25px 3.33%;
+	padding-left: 3.33%;
+	padding-right: 3.33%;
 	text-align:center;
 }
 
