--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ main article .half_width {
 }
 
 footer {
-	padding:25px 7%;
+	padding:50px 7%;
 	text-align:right;
 	color:#AEBFAC;
 }
